@@ -100,6 +100,7 @@
     <None Include="src\network\connection.c" />
     <None Include="src\common\vector.h" />
     <None Include="src\common\quaternion.h" />
+    <None Include="src\script\il.h" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\ini.c" />
@@ -128,6 +129,7 @@
     <Compile Include="src\graphics\glutil.c" />
     <Compile Include="src\common\vector.c" />
     <Compile Include="src\common\quaternion.c" />
+    <Compile Include="src\script\il.c" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
