@@ -1,5 +1,11 @@
 2012-10-11  tiffany  <tiffany@stormbit.net>
 
+* src/script/il.c, src/script/il.h, src/script/script.h,
+  src/script/script.c:
+  
+
+2012-10-11  tiffany  <tiffany@stormbit.net>
+
 * src/main.c, src/asset/asset.h, src/asset/asset.c,
   src/script/script.c, src/script/script.h, src/common/keymap.c,
   src/common/quaternion.c:
